--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.umap filter=lfs diff=lfs merge=lfs -text
+HackerPvP_Proj/HackerPvP_Proj.uproject filter=lfs diff=lfs merge=lfs -text
+*.uproject filter=lfs diff=lfs merge=lfs -text
+*.ush filter=lfs diff=lfs merge=lfs -text
