--- a/HackerPvP_Proj/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HackerPvP_Proj/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Sessions/Widgets
+ContentBrowserDrawer.SelectedPaths=/Game/Sessions/Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1364,6 +1364,8 @@ Voice.TimeStamp=2022.11.03-21.43.46
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2022.11.03-21.43.40
 MovieSceneCapture.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.11.03-21.43.38
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
