--- a/HackerPvP_Proj/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HackerPvP_Proj/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -76,7 +76,7 @@ LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
-PlayNetMode=PIE_Standalone
+PlayNetMode=PIE_ListenServer
 RunUnderOneProcess=True
 PlayNetDedicated=False
 PlayNumberOfClients=1
@@ -152,9 +152,13 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Sessions/Maps/MainMenuLVL
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -421,6 +425,294 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+MainMenu_PC_C.PlayerController=True
+MainMenu_PC_C.Tick=True
+MainMenu_PC_C.Cheat Manager=True
+MainMenu_PC_C.MouseInterface=True
+MainMenu_PC_C.Game=True
+MainMenu_PC_C.WorldPartition=True
+MainMenu_PC_C.Controller=True
+MainMenu_PC_C.Replication=True
+MainMenu_PC_C.Actor=True
+MainMenu_PC_C.Input=True
+MainMenu_PC_C.HLOD=True
+MainMenu_PC_C.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.HLODSystem=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.Foliage=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=False
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=False
+VerticalBox.Accessibility=False
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+CreateSession_C.Appearance=True
+CreateSession_C.Input=True
+CreateSession_C.Accessibility=True
+CreateSession_C.Interaction=True
+CreateSession_C.Behavior=True
+CreateSession_C.Render Transform=True
+CreateSession_C.Performance=True
+CreateSession_C.Clipping=True
+CreateSession_C.Navigation=True
+CreateSession_C.Localization=True
+SizeBox.Layout=True
+SizeBox.Child Layout=False
+SizeBox.Accessibility=False
+SizeBox.Behavior=True
+SizeBox.Render Transform=False
+SizeBox.Performance=False
+SizeBox.Clipping=False
+SizeBox.Navigation=False
+SizeBox.Localization=True
+EditableText.Layout=True
+EditableText.Content=True
+EditableText.Appearance=True
+EditableText.Accessibility=True
+EditableText.Behavior=True
+EditableText.Render Transform=True
+EditableText.Performance=True
+EditableText.Clipping=True
+EditableText.Navigation=True
+EditableText.Localization=True
+EditableText.Events=True
+Font.Font=True
+Font.RuntimeFont=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+CheckBox.Layout=True
+CheckBox.Appearance=True
+CheckBox.Style=True
+CheckBox.Accessibility=True
+CheckBox.Interaction=True
+CheckBox.Behavior=True
+CheckBox.Render Transform=True
+CheckBox.Performance=True
+CheckBox.Clipping=True
+CheckBox.Navigation=True
+CheckBox.Localization=True
+CheckBox.Events=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+Border.Layout=True
+SkyLight.LOD=False
+SkyLightComponent.TransformCommon=True
+SkyLightComponent.Light=True
+SkyLightComponent.DistanceFieldAmbientOcclusion=True
+SkyLightComponent.AtmosphereAndCloud=True
+SkyLightComponent.RayTracing=True
+SkyLightComponent.Rendering=True
+SkyLightComponent.Tags=True
+SkyLightComponent.Cooking=True
+SkyLightComponent.LOD=True
+SkyLightComponent.Collision=True
+TextRenderActor.Actor=True
+TextRenderActor.Input=True
+TextRenderActor.WorldPartition=True
+TextRenderActor.Replication=True
+TextRenderActor.Cooking=True
+TextRenderActor.Tags=True
+TextRenderActor.Navigation=True
+TextRenderActor.Lighting=True
+TextRenderActor.HLOD=True
+TextRenderActor.Rendering=True
+TextRenderActor.Text=True
+TextRenderActor.Materials=True
+TextRenderActor.TransformCommon=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.WorldPartition=True
+StaticMeshActor.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.WorldPartition=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+WorldSettings.WorldPartition=True
+WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
+BillboardComponent.TransformCommon=True
+BillboardComponent.Sprite=True
+BillboardComponent.HLOD=True
+BillboardComponent.Rendering=True
+BillboardComponent.Navigation=True
+BillboardComponent.Tags=True
+BillboardComponent.Cooking=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.HLOD=True
+DirectionalLight.WorldPartition=True
+DirectionalLight.Actor=True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Actor=True
+PropertyWrapper.Variable=True
+PropertyWrapper.Events=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+ScrollBox.Layout=True
+ScrollBox.Style=True
+ScrollBox.Scroll=True
+ScrollBox.Accessibility=True
+ScrollBox.Behavior=True
+ScrollBox.Render Transform=True
+ScrollBox.Performance=True
+ScrollBox.Clipping=True
+ScrollBox.Navigation=True
+ScrollBox.Localization=True
+JoinSession_C.Appearance=True
+JoinSession_C.Designer=True
+JoinSession_C.Input=True
+JoinSession_C.Interaction=True
+JoinSession_C.Performance=True
+JoinSession_C.Layout=True
+JoinSession_C.Behavior=True
+JoinSession_C.Render Transform=True
+JoinSession_C.Localization=True
+JoinSession_C.Accessibility=True
+JoinSession_C.Clipping=True
+JoinSession_C.Navigation=True
+JoinSession_C.Default=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_VariableGet.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -430,6 +722,40 @@ ProjectPackagingSettings=True
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Border="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+Object="\"Object\" "
+VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+CreateSession_C="\"Object\" "
+UserWidget="\"Object\" "
+SizeBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+EditableText="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Font="\"Object.Font\" "
+HorizontalBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+CheckBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+WorldPartitionRuntimeSpatialHash="\"Object\" "
+WorldPartitionRuntimeHash="\"Object\" "
+SkyLightComponent="\"Object\" "
+LightComponentBase="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+CapsuleComponent="\"Object\" "
+ShapeComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+BillboardComponent="\"Object\" "
+EdGraphNode_Comment="\"Object\" "
+EdGraphNode="\"Object\" "
+ScrollBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+JoinSession_C="\"Object\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -441,7 +767,7 @@ bHighlightSelectedDataLayers=True
 bDisableLoadingOfLastLoadedCells=False
 bBugItGoLoadCells=False
 bShowCellCoords=False
-PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
+PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/Sessions/Maps/GameplayLVL.GameplayLVL", ()),("/Game/Sessions/Maps/MainMenuLVL.MainMenuLVL", ()))
 
 [RootWindow]
 ScreenPosition=X=289.000 Y=180.000
@@ -462,7 +788,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/natba/Desktop/Hacker PvP/HackerPvP_Proj/Content/
+UNR=../../../../../../Users/natba/Desktop/Hacker PvP/HackerPvP_Proj/Content/Sessions/Maps
 BRUSH=../../../../../../Users/natba/Desktop/Hacker PvP/HackerPvP_Proj/Content/
 FBX=../../../../../../Users/natba/Desktop/Hacker PvP/HackerPvP_Proj/Content/
 FBXAnim=../../../../../../Users/natba/Desktop/Hacker PvP/HackerPvP_Proj/Content/
@@ -1366,8 +1692,184 @@ MovieSceneCapture.TimeStamp=2022.11.03-21.43.40
 MovieSceneCapture.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.11.03-21.43.38
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.11.03-21.43.32
+BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2022.11.03-21.43.43
+SequencerWidgets.LastCompileMethod=Unknown
+FontEditor.TimeStamp=2022.11.03-21.43.37
+FontEditor.LastCompileMethod=Unknown
+PerfCounters.TimeStamp=2022.11.03-21.43.41
+PerfCounters.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[MRU]
+MRUItem0=/Game/Sessions/Maps/MainMenuLVL
+MRUItem1=/Game/Sessions/Maps/GameplayLVL
+
+[WidgetTemplatesExpanded]
+Common=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[DetailCustomWidgetExpansion]
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
+WorldPartitionRuntimeSpatialHash=
+SkyLightComponent=SkyLightComponent.TransformCommon.Transform,
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Sessions/Widgets/JoinSession
+MRUItem1=/Game/Sessions/Widgets/FindSession
+MRUItem2=/Game/Sessions/Maps/MainMenuLVL
+MRUItem3=/Game/Sessions/Maps/GameplayLVL
+MRUItem4=/Engine/EngineFonts/Roboto
+MRUItem5=/Game/Sessions/Widgets/CreateSession
+MRUItem6=/Game/Sessions/Blueprints/MainMenu/MainMenu_PC
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+
+[SelectionDetails]
+PreserveScaleRatio=True
+
+[UMGEditor.Designer]
+PreviewWidth=1600
+PreviewHeight=900
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=True
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+
+[DetailCategoriesAdvanced]
+Border.Accessibility=False
+TextBlock.Appearance=False
+VerticalBox.Behavior=False
+SizeBox.Behavior=False
+EditableText.Accessibility=False
+SizeBox.Accessibility=True
+Border.Appearance=True
+Border.Behavior=False
+SkyLight.Actor=False
+Button.Interaction=True
+HorizontalBox.Behavior=False
+TextBlock.Localization=False
+TextBlock.Accessibility=False
+TextBlock.Performance=False
+TextBlock.Behavior=True
+PropertyWrapper.Variable=False
+
+[AssetEditorToolkitTabLocation]
+/Game/Sessions/Widgets/CreateSession.CreateSession=1
+/Engine/EngineFonts/Roboto.Roboto=1
+/Game/Sessions/Blueprints/MainMenu/MainMenu_PC.MainMenu_PC=1
+/Game/Sessions/Widgets/FindSession.FindSession=1
+/Game/Sessions/Widgets/JoinSession.JoinSession=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
