Troubleshooting Level Blueprint
Level BP doesn't fire, effort to fix this ongoing

--- a/HackerPvP_UE5p1/Config/DefaultEngine.ini
+++ b/HackerPvP_UE5p1/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=HackerPvP_UE5p1
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Sessions/Maps/MainMenuLVL.MainMenuLVL
+GameDefaultMap=/Game/Sessions/Maps/MainMenuLVL.MainMenuLVL
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
